<resources>
    <string name="app_name">锦游</string>

    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="splash">splash</string>

    <string name="soft_update_no">已经是最新版本</string>
    <string name="soft_update_title">软件更新</string>
    <string name="soft_update_info">检测到新版本，立即更新吗</string>
    <string name="soft_update_updatebtn">更新</string>
    <string name="soft_update_later">稍后更新</string>
    <string name="soft_updating">正在更新</string>
    <string name="soft_update_cancel">取消</string>


    <string name="login">登　录</string>
    <string name="register">注　册</string>
    <string name="forget_pwd">忘记密码？</string>
    <string name="phone_no">手机号</string>
    <string name="password">密　码 (6–16位字母或数字)</string>
    <string name="security_code">验证码</string>
    <string name="send_code">获取验证码</string>
    <string name="next">下一步</string>
    <string name="new_pwd">新密码 (6–16位字母或数字)</string>
    <string name="re_pwd">确认密码 (与上面的密码保持一致)</string>
    <string name="reset_pwd">完　成</string>

    <string name="device_management">设备管理</string>
    <string name="member_management">游客管理</string>
    <string name="setting">系统设置</string>
    <string name="ckeck_updates">检查更新</string>
    <string name="exit_login">退出登录</string>

    <string name="device_name">设备名称</string>
    <string name="device_name_hint">设备备注名称</string>
    <string name="device_imei">设备IMEI</string>
    <string name="device_imei_hint">设备IMEI(15位数字)</string>
    <string name="device_sos_no">SOS呼叫号码</string>
    <string name="device_sos_no_hint">默认是注册手机号码</string>
    <string name="device_call_no">设备手机号码</string>
    <string name="device_call_no_hint">没有更换SIM卡请勿更改</string>

    <string name="device_info_name">设备名称: %s</string>
    <string name="device_info_imei">设备IMEI:  %s</string>
    <string name="device_info_sos">SOS呼叫号码:  %s</string>
    <string name="device_info_phone">设备手机号码:  %s</string>
    <string name="device_info_binding_time">设备绑定时间:  %s</string>
    <string name="device_info_use_state">设备使用状态:  %s</string>

    <string name="member_info_name">名称: %s</string>
    <string name="member_info_card_id">身份证: %s</string>
    <string name="member_info_linkman_name">监护人: %s</string>
    <string name="member_info_linkman_phone">监护人电话: %s</string>
    <string name="member_info_device_imei">设备IMEI: %s</string>
    <string name="member_info_device_phone">设备手机号: %s</string>

    <string name="no_data">无数据</string>
    <string name="blood_pressure">血压</string>
    <string name="systolic_pressure">收缩压 :</string>
    <string name="diastolic_pressures">舒张压 :</string>
    <string name="blood_sugar">血糖</string>
    <string name="blood_sugar_data">血糖值 :</string>
    <string name="heart_rate">心率</string>
    <string name="heart_rate_data">心　率 :</string>
    <string name="step_counter">计步</string>
    <string name="step_counter_today">今日步数 :</string>
    <string name="step_counter_max">最高纪录 :</string>

    <string name="now_muster">紧急集合</string>
    <string name="time_muster">定时集合</string>
    <string name="send_muster_msg">发送集合信息</string>
    <string name="setting_time_muster">设置定时集合</string>
    <string name="hint_muster_msg">集合！集合了！</string>

    <string name="personal_name">姓名：%s</string>
    <string name="personal_guide_card">证件：%s</string>
    <string name="personal_company">公司：%s</string>

    <string name="personal_et_name">姓名</string>
    <string name="personal_et_phone">手机号码</string>
    <string name="personal_et_company">公司名称</string>
    <string name="personal_et_guide_card">导游资格证</string>

    <string name="scan_info">将二维码放入取景框内保持15厘米左右距离\n即可自动扫描</string>

    <string name="select_device">选择设备</string>
    <string name="member_name">姓名</string>
    <string name="member_phone">电话</string>
    <string name="member_id_card">身份证号码</string>
    <string name="member_linkman_name">监护人</string>
    <string name="member_linkman_tel">监护人电话</string>
    <string name="click_take_photos">点击头像拍照</string>
    <string name="btn_binding_member">确认</string>
    <string name="binding_device">绑定设备：</string>

    <string name="delete_member">删除游客</string>
    <string name="delete_membet_msg">从团队中删除游客%s</string>

    <string name="info_notice">提 醒</string>

    <!--Toast-->
    <string name="toast_error_network">当前网络不可用，请检查你的网络设置</string>
    <string name="toast_error_socket">服务器异常</string>
    <string name="toast_socket_timeout">服务器连接超时</string>
    <string name="toast_phone_password_not_null">手机号/密码不能为空</string>
    <string name="toast_phone_not_null">手机号码不能为空</string>
    <string name="toast_phone_format_error">手机号码格式错误</string>
    <string name="toast_verification_code_has_been_sent">验证码已发送</string>
    <string name="toast_password_format_error">密码格式错误\n请输入6–16位字母或数字密码</string>
    <string name="toast_two_password_not_consistent">两次输入的密码不一致</string>
    <string name="toast_submit_information_not_null">提交信息不能为空</string>
    <string name="toast_register_success">注册成功</string>
    <string name="toast_login_success">登录成功</string>
    <string name="toast_reset_success">密码重置成功</string>


    <!--Jpush-->
    <string name="tag_hint">Tag为大小写字母，数字，下划线,中文， 多个用以逗号分隔</string>
    <string name="alias_hint">Alias为大小写字母，数字，下划线</string>
    <string name="style_hint">style为数字</string>
    <string name="error_style_empty">style不能为空</string>
    <string name="error_alias_empty">alias不能为空</string>
    <string name="error_tag_empty">tag不能为空</string>
    <string name="error_tag_gs_empty">格式不对</string>
    <string name="error_network">网络连接异常,初始化失败 请检查网络！</string>
    <string name="logining">程序在后台执行, 请查看日志！</string>
    <string name="setting_su">设置成功</string>

    <string  name="normal">按住 说话</string>
    <string  name="recording">松开 结束</string>
    <string  name="want_to_cancle">松开手指，取消发送</string>
    <string name="shouzhishanghua">手指上滑，取消发送</string>
    <string name="tooshort">录音时间过短</string>


</resources>
