<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:fitsSystemWindows="true"
              android:gravity="center_horizontal"
              android:orientation="vertical">

    <include layout="@layout/toolbar"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:gravity="center">

        <com.jyyl.jinyou.widget.CircleImageView
            android:id="@+id/iv_personal_photoview"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@mipmap/ic_launcher"
            app:civ_border_color="@color/lightgray"
            app:civ_border_width="1dp"/>
    </RelativeLayout>

    <TextView
        android:id="@+id/personal_nickname"
        style="@style/textview_personal_info"
        android:text="@string/personal_name"/>


    <TextView
        android:id="@+id/personal_guide_card"
        style="@style/textview_personal_info"
        android:text="@string/personal_guide_card"/>

    <TextView
        android:id="@+id/personal_company"
        style="@style/textview_personal_info"
        android:text="@string/personal_company"/>

</LinearLayout>