<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/colorBg"
              android:fitsSystemWindows="true"
              android:orientation="vertical">

    <include
        layout="@layout/toolbar"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <com.jyyl.guideapp.widget.CleanEditText
            android:id="@+id/et_login_acc"
            style="@style/edittext_login_style"
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_edit_hight"
            android:layout_alignParentTop="true"
            android:drawableRight="@drawable/abc_ic_clear_mtrl_alpha"
            android:hint="@string/phone_no"
            android:inputType="phone"/>

        <com.jyyl.guideapp.widget.CleanEditText
            android:id="@+id/et_login_pwd"
            style="@style/edittext_login_style"
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_edit_hight"
            android:layout_below="@+id/et_login_acc"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:hint="@string/password"
            android:inputType="textPassword"/>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_login_pwd"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:background="@drawable/selector_btn_bg"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_medium"/>

        <TextView
            android:id="@+id/login_forget_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/btn_login"
            android:gravity="center"
            android:minHeight="@dimen/ui_small_size"
            android:text="@string/forget_pwd"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_medium"/>

        <TextView
            android:id="@+id/login_go_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/btn_login"
            android:gravity="center"
            android:minHeight="@dimen/ui_small_size"
            android:minWidth="@dimen/ui_small_size"
            android:text="@string/register"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_medium"/>
    </RelativeLayout>

</LinearLayout>