<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              xmlns:tools="http://schemas.android.com/tools"
              android:background="@color/white"
              android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginBottom="10dp"
        android:background="@color/skyblue">

        <com.jyyl.jinyou.widget.CircleImageView
            android:id="@+id/iv_nav_photoview"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_centerInParent="true"
            app:civ_border_color="@color/lightgray"
            app:civ_border_width="1dp"
            android:onClick="onClick"
            android:src="@mipmap/ic_launcher"/>

        <TextView
            android:id="@+id/tv_guide_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/iv_nav_photoview"
            android:textSize="@dimen/text_size_medium"
            android:textColor="@color/white"
            tools:text="名称"/>

        <ImageView
            android:id="@+id/iv_nav_notice"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentRight="true"
            android:layout_margin="20dp"
            android:scaleType="fitXY"
            android:elevation="2dp"
            android:onClick="onClick"
            android:src="@drawable/icon_notice_w"/>

    </RelativeLayout>

    <TextView
        android:id="@+id/tv_nav_device"
        style="@style/textview_nav_item"
        android:text="@string/device_management"/>

    <TextView
        android:id="@+id/tv_nav_member"
        style="@style/textview_nav_item"
        android:text="@string/member_management"/>

    <!--<TextView-->
        <!--android:id="@+id/tv_nav_setting"-->
        <!--style="@style/textview_nav_item"-->
        <!--android:text="@string/setting"/>-->

    <TextView
        android:id="@+id/tv_nav_ckeck_updates"
        style="@style/textview_nav_item"
        android:text="@string/ckeck_updates"/>

    <TextView
        android:id="@+id/tv_nav_exit_login"
        style="@style/textview_nav_item"
        android:text="@string/exit_login"/>
</LinearLayout>