<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:fitsSystemWindows="true"
              android:orientation="vertical">

    <include layout="@layout/toolbar"/>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical"
            android:padding="20dp">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">

                <com.jyyl.guideapp.widget.CleanEditText
                    android:id="@+id/et_personal_name"
                    style="@style/edittext_info_style"
                    android:hint="@string/personal_et_name"
                    android:inputType="text"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">

                <com.jyyl.guideapp.widget.CleanEditText
                    android:id="@+id/et_personal_phone"
                    style="@style/edittext_info_style"
                    android:hint="@string/personal_et_phone"
                    android:inputType="text"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">

                <com.jyyl.guideapp.widget.CleanEditText
                    android:id="@+id/et_personal_guide_card"
                    style="@style/edittext_info_style"
                    android:hint="@string/personal_et_guide_card"
                    android:inputType="text"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">

                <com.jyyl.guideapp.widget.CleanEditText
                    android:id="@+id/et_personal_company"
                    style="@style/edittext_info_style"
                    android:hint="@string/personal_et_company"
                    android:inputType="text"/>
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>